fixing alignment issues with prediction table

--- a/app/static/checkin.css
+++ b/app/static/checkin.css
@@ -27,4 +27,8 @@ text.title {
   font-size: 22px;
   font-weight: 600;
 }
+.predict_table {
+  margin-left:auto; 
+  margin-right:auto;
+}
 
